--- a/src/index.css
+++ b/src/index.css
@@ -132,3 +132,21 @@
 * {
   scroll-behavior: smooth;
 }
+
+
+::-webkit-scrollbar {
+  width: 0.5vw;
+}
+
+::-webkit-scrollbar-track {
+  background: #fafafa;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #16653491;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #414141;
+}
